package edu.fiuba.algo3.modelo.Construible;

import edu.fiuba.algo3.modelo.Defensa.Defensa;

public class Rocoso extends Construible{
    @Override
    public void construir(Defensa defensa){}
}
