package edu.fiuba.algo3.modelo;

public class Largada extends Pasarela{

    public Largada(Pasarela pasarela_anterior) {
        super(pasarela_anterior);
    }
}
